Updated UI for Quiz Page. - Changed color of different elements to align with color scheme - Resized display of questions and buttons to make it a fixed height/width - Modified HUD of progress bar and score for a cleaner look

--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -1,16 +1,39 @@
 body {
-    color: #bdffe4;
+    color: white;
 
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.question-container {
+    width: 1000px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
 .choice-container {
     display: flex;
-    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
     width: 100%;
+    height: 80px;
+    padding: 0;
     border-radius: 50px;
     background: #1fc397;
     font-size: 3rem;
-    min-width: 80rem;
+    cursor: pointer;
+    transition: background-color 0.3 ease-in-out;
+    flex-grow: 1;
 }
 
 .choice-container:hover {
@@ -22,45 +45,47 @@ body {
 
 .choice-prefix {
     padding: 2rem 2.5rem;
-    color: #bdffe4;
+    color: white;
 }
 
 .choice-text {
-    padding: 2rem;
-    width: 100%;
-}
-
-.correct {
-    background: linear-gradient(32deg, rgb(11, 223, 36) 0%, rgb(41, 232, 111) 100%);
-}
-
-.incorrect {
-    background: linear-gradient(32deg, rgb(230, 29, 29, 1) 0%, rgb(224, 11, 11, 1) 100%);
+    width: 1500px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    color: white;
+    font-size: 18px;
+    padding: 0;
 }
 
 #question {
+    text-align: center;
     color: #f1f1f1;
+    font-size: 40px;
 }
 
 #hud {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .hud-prefix {
     text-align: center;
     font-size: 2rem;
-    color: #bdffe4;
+    color: white;
 }
 
 .hud-main-text {
+    color: white;
     text-align: center;
 }
 
 #progressBar {
     width: 20rem;
     height: 3rem;
-    border: 0.2rem solid rgb(11, 223, 36);
+    border: 0.2rem solid #0d7a5d;
     margin-top: 2rem;
     border-radius: 50px;
     overflow: hidden;
@@ -68,10 +93,49 @@ body {
 
 #progressBarFull {
     height: 100%;
-    background: rgb(11, 223, 36);
+    background: #169976;
     width: 0%;
 }
 
+.results-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh;  /* Make the container fill the entire height of the viewport */
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* Space between buttons */
+    margin-top: 20px;
+}
+
+.btn {
+    font-family: "Nova Square", cursive;
+    font-size: 2rem;
+    padding: 1.5rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    text-decoration: none;
+    color: var(--text-light);
+    background: var(--primary-color);
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+    border: none;
+    cursor: pointer;
+  }
+  
+
+.btn:hover {
+    background-color: #0d7156;
+}
 
 
 @media screen and (max-width: 768px) {
